@@ -85,7 +85,13 @@ do_model_compare (const char *a, const char *b)
     return cmp;
   }
 
-  return 0;
+  if (quick_a == '\0' && quick_b == '\0')
+    return 0;
+
+  if (quick_a == '\0')
+    return -1;
+
+  return 1;
 }
 
 static const char *
